--- a/index.html
+++ b/index.html
@@ -44,17 +44,7 @@
                         veniam illum aliquam minus minima 
                         deserunt repudiandae, quia repellendus 
                         ratione, enim facere recusandae, 
-                        reprehenderit eius. Officiis ab error 
-                        praesentium.naeiikla nddhhfy njfjsfjff
-                        kkalJjdifo kkjfuiif lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quidlorem Lorem ipsum dolor 
+                        reprehenderit eius.
                         <a href="/">...selengkapnya</a>
                     </p>
                 </a>
@@ -68,17 +58,7 @@
                         veniam illum aliquam minus minima 
                         deserunt repudiandae, quia repellendus 
                         ratione, enim facere recusandae, 
-                        reprehenderit eius. Officiis ab error 
-                        praesentium.naeiikla nddhhfy njfjsfjff
-                        kkalJjdifo kkjfuiif lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quidlorem Lorem ipsum dolor 
+                        reprehenderit eius. 
                         <a href="/">...selengkapnya</a>
                     </p>
                 </a>
@@ -92,17 +72,7 @@
                         veniam illum aliquam minus minima 
                         deserunt repudiandae, quia repellendus 
                         ratione, enim facere recusandae, 
-                        reprehenderit eius. Officiis ab error 
-                        praesentium.naeiikla nddhhfy njfjsfjff
-                        kkalJjdifo kkjfuiif lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quidlorem Lorem ipsum dolor 
+                        reprehenderit eius.  
                         <a href="/">...selengkapnya</a>
                     </p>
                 </a>
@@ -116,17 +86,7 @@
                         veniam illum aliquam minus minima 
                         deserunt repudiandae, quia repellendus 
                         ratione, enim facere recusandae, 
-                        reprehenderit eius. Officiis ab error 
-                        praesentium.naeiikla nddhhfy njfjsfjff
-                        kkalJjdifo kkjfuiif lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quid
-                        lorem Lorem ipsum dolor 
-                        sit amet consectetur, adipisicing elit. 
-                        Magnam, eum ullam recusandae quidlorem Lorem ipsum dolor 
+                        reprehenderit eius. 
                         <a href="/">...selengkapnya</a>
                     </p>
                 </a>
@@ -146,6 +106,17 @@
              </div>
         </div>
     </section>
+    <div class="contact">
+        <a href="#">DMCA</a>
+        <a href="#">Terms and Condotion</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Sitemap</a>
+    </div>
+    <div class="footer">
+        <p>© Copyright 2013-2023 OceanofGames.com All Rights Reserved.</p>
+    </div>
 
 
     <script src="index.js"></script>
